<resources>
    <string name="app_name">AteneaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="let_s_get_started">"Let's Get Started"</string>
    <string name="the_style_you_love">"the style you love"</string>
    <string name="clothing">Clothing</string>
    <string name="search_hint">Search for anything related fashion</string>
    <string name="fashion">Fashion</string>
    <string name="store">Store</string>
    <string name="trending">trending</string>
    <string name="view_all">View All</string>
    <string name="new_arriaval">New Arrival</string>
    <string name="categories">Categories</string>
    <string name="dolar">$</string>
    <string name="size">Size</string>

    <string name="search_by_keywords">search by keywords</string>
    <string name="women_s">womens</string>
    <string name="clothing_style">clothing style</string>

    <!-- Data Test -->

    <string name="cat_a">Women</string>
    <string name="cat_b">Men</string>
    <string name="cat_c">Kids</string>
    <string name="cat_d">Home &amp; Living</string>
    <string name="cat_e">Gadgets</string>

    <string name="sub_a">Clothing Style</string>
    <string name="sub_b">Foot wear</string>
    <string name="sub_c">Accessories</string>

    <string name="_7_itens_in_favoriets">7 itens in favoriets</string>
    <string name="_8_items_added">8 items Added!</string>

    <string name="your_bag">Your Bag</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax_9">Tax 9%</string>
    <string name="total_items">Total items</string>
    <string name="checkout">Checkout</string>

    <string name="color_black">BLACK</string>
    <string name="color_bron">Brown</string>
    <string name="color_light_pink">LIGHT PINK</string>
    <string name="color_pink_white">Pink-White</string>
    <string name="color_yello">YELLOW</string>

    <string name="size_a">XS</string>
    <string name="size_b">X</string>
    <string name="size_c">M</string>
    <string name="size_d">L</string>
    <string name="size_e">XL</string>
    <string name="slimfit">SLIM FIT</string>

    <string name="cart_a">Vero women blazer</string>
    <string name="cart_b">Women Pink Solid Shirt Dress</string>
    <string name="cart_c">Women Regular Shorts</string>
    <string name="cart_d">Women Anarkali Kurta</string>
    <string name="cart_e">Women Solid Biker Jacket</string>
    <string name="cart_f">Printed Sheath Dress</string>

    <string name="sign_in">Sign in</string>
    <string name="hello">Hello</string>
    <string name="guest">Guest</string>
    <string name="open">Open</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="view_my_order">View my order</string>

    <string name="locat_all_stores">Locat all stores</string>
    <string name="change_language">Change Language</string>
    <string name="get_support">Support</string>

    <string name="settings">Setting</string>
    <string name="my_order">My Order</string>
    <string name="order_no">Order No</string>
    <string name="item">Item</string>
    <string name="biil">Bill</string>
    <string name="in_progress">In Progress</string>

    <string name="view">View</string>
    <string name="lbl_pending">pending</string>
    <string name="lbl_delivery">delivery</string>
    <string name="lbl_return">return</string>
    <string name="lbl_cancel">cancel</string>

    <string name="order_details">Order Details</string>
    <string name="shipping">Shipping</string>
    <string name="shipped_to">shipped to</string>
    <string name="home_address">home address</string>
    <string name="payment">payment</string>
    <string name="by_net_banking">by net banking</string>

    <string name="complite">complite</string>
    <string name="order_made_on">order made on</string>
    <string name="_12th_january_5_27_pm">12th january 5 27 pm</string>

    <string name="delivered">delivered</string>
    <string name="in_afternoon">in_afternoon</string>

    <string name="write_your_feedback">write your feedback</string>
    <string name="edit">edit</string>

    <string name="nav_my_account">My Account</string>
    <string name="change">Change</string>
    <string name="addresses">addresses</string>
    <string name="add_manage">Add/Manage</string>
    <string name="change_password">Change Password</string>
    <string name="clear_history">Clear History</string>
    <string name="deactivate_account">Desactivate Account</string>
    <string name="delivery_address">Delivery Address</string>

    <string name="add_a">"Greenland Hans Egedesvej 29 P.O. Box 1615 3900 Nuuk "</string>
    <string name="add_b">"Hans Egedesvej 29 P.O. Box 1615 3900 Nuuk Greenland"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>

    <string name="enter_first_name">enter first name</string>

    <string name="first_name">first name</string>
    <string name="enter_last_name">enter last name</string>

    <string name="last_name">last name</string>

    <string name="enter_your_email">enter your email</string>
    <string name="email">Email</string>

    <string name="enter_your_phone">enter your phone</string>
    <string name="phone">phone</string>

    <string name="enter_gender">enter gender</string>
    <string name="gender">gender</string>

    <string name="enter_city_name">enter city name</string>

    <string name="city_new">city new</string>
    <string name="enter_state_name">enter state name</string>
    <string name="state_new">state_new</string>

    <string name="deliver_to">deliver to</string>
    <string name="delivery_method">delivery method</string>

    <string name="standard_delivery">standard delivery</string>
    <string name="_4_5_dayd_from_today_includiv_sat_sun">4-5 dayd from Today. \10*Includiv sat-sun</string>

    <string name="free">free</string>
    <string name="one_day_delivery">one day delivery</string>
    <string name="fast_delivery">fast delivery </string>
    <string name="review_order">review order</string>
    <string name="modify">modify</string>
    <string name="confirm">confirm</string>

    <string name="your_card">YOUR CARD</string>
    <string name="payment_method">Payment Method</string>

    <string name="get_5_off_with_buzz_credit_card">Get 5% oFF with Buzz credit card</string>

    <string name="credit_debit_atm_card">Credit / Debit / ATM Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="wallet_upi">UPI</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="process">Process</string>

    <string name="visa">Visa</string>
    <string name="signature">Signature</string>

    <string name="card_number_1">1234 4567 8456 5489</string>
    <string name="your_order_will_be_shipped_to">your order will be shipped to</string>
    <string name="order_status">order status</string>
    <string name="shipping_is_under_process">shipping is under process</string>
    <string name="congratulations">congratulations</string>
    <string name="thank_you_for_shopping_from_us">thank you for shopping from us</string>
    <string name="your_order_will_be_delivered_by_17th_january">your order will be delivered by 17th january</string>
    <string name="continue_shopping">continue shopping</string>

    <string name="add_to_wishlist">add to wishlist</string>
    <string name="in_wishlist">in wishlist</string>

    <string name="add_to_bag">add to bag</string>
    <string name="added">added</string>

    <string name="product_a">Woman pink sild fir</string>
    <string name="product_b">white striped T-shirt</string>
    <string name="product_c">Mis chase round</string>
    <string name="product_d">Must harbour red Shorts</string>
    <string name="product_e">Mast harbour troursers</string>
    <string name="product_f">Dress bery front open</string>
    <string name="product_g">Woman pink sild fir</string>
    <string name="product_h">Mis chase round</string>
    <string name="product_i">Mast harbour troursers</string>
    <string name="color">color</string>
    <string name="details">details</string>
    <string name="loren_inpun">loren inpun</string>
    <string name="ratting_reviews">ratting reviews</string>
    <string name="rattings">rattings</string>
    <string name="_75_reviews">75 reviews</string>
    <string name="sellar_details">sellar details</string>
    <string name="a1_fashion_store">a1 fashion store</string>
    <string name="delivery_by_17_jan_thursday">delivery by 17 jan thursday</string>
    <string name="view_all_sellers">view all sellers</string>
    <string name="similar_products">similar products</string>
    <string name="sold_by">Sold by</string>

</resources>